Add third library and test both

--- a/app-using-dnx/src/Lib/project.json
+++ b/app-using-dnx/src/Lib/project.json
@@ -1,9 +1,8 @@
 {
     "dependencies":{
-        "Lib":"",
         "System.Runtime":"4.0.0-rc1-*"
     },
     "frameworks":{
-        "dnxcore50":{}
+        "dotnet":{}
     }
 }
