--- a/app-using-dnx/src/App/project.json
+++ b/app-using-dnx/src/App/project.json
@@ -1,12 +1,35 @@
 {
-    "dependencies":{
-        "Lib":"",
-        "System.Runtime":"4.0.0-rc1-*"
-    },
     "frameworks":{
-        "dnxcore50":{},
-        "dotnet51":{},
-        "dotnet55":{},
-        "net45":{}
+        "dnxcore50":{
+            "dependencies":{
+                "System.Runtime":"4.0.0-rc1-*"
+            }
+        },
+        "dotnet51":{
+            "dependencies":{
+                "System.Runtime":"4.0.0-rc1-*"
+            }
+        },
+        "dotnet55":{
+            "dependencies":{
+                "System.Runtime":"4.0.0-rc1-*"
+            }
+        },
+        "net45":{},
+        "net40":{},
+        ".NETPortable,Version=v4.0,Profile=Profile328":{
+            "frameworkAssemblies":{
+                "mscorlib":"",
+                "System":"",
+                "System.Core":""
+            }
+        },
+        ".NETPortable,Version=v4.0,Profile=Profile344":{
+            "frameworkAssemblies":{
+                "mscorlib":"",
+                "System":"",
+                "System.Core":""
+            }
+        }
     }
 }
