--- a/libs/lib1/project.json
+++ b/libs/lib1/project.json
@@ -3,6 +3,8 @@
         "System.Runtime":"4.0.0-rc1-*"
     },
     "frameworks":{
-        "dotnet":{}
+        "dnxcore50":{},
+        "dotnet51":{},
+        "dotnet55":{}
     }
 }
