--- a/app-using-dnx/src/App/project.json
+++ b/app-using-dnx/src/App/project.json
@@ -1,4 +1,7 @@
 {
+    "dependencies":{
+        "Lib":""
+    },
     "frameworks":{
         "dnxcore50":{
             "dependencies":{
@@ -16,14 +19,6 @@
             }
         },
         "net45":{},
-        "net40":{},
-        ".NETPortable,Version=v4.0,Profile=Profile328":{
-            "frameworkAssemblies":{
-                "mscorlib":"",
-                "System":"",
-                "System.Core":""
-            }
-        },
         ".NETPortable,Version=v4.0,Profile=Profile344":{
             "frameworkAssemblies":{
                 "mscorlib":"",
