--- a/app-using-dnx/src/Lib/project.json
+++ b/app-using-dnx/src/Lib/project.json
@@ -1,8 +1,17 @@
 {
-    "dependencies":{
-        "System.Runtime":"4.0.0-rc1-*"
-    },
     "frameworks":{
-        "dotnet":{}
+        "dotnet":{
+            "dependencies":{
+                "System.Runtime":"4.0.0-rc1-*"
+            }
+        },
+        "net45":{},
+        ".NETPortable,Version=v4.0,Profile=Profile344":{
+            "frameworkAssemblies":{
+                "mscorlib":"",
+                "System":"",
+                "System.Core":""
+            }
+        }
     }
 }
