--- a/app-using-dnx/src/SomeDependencyLib/project.json
+++ b/app-using-dnx/src/SomeDependencyLib/project.json
@@ -6,7 +6,22 @@
             }
         },
         "net45":{},
+        "net40":{},
         ".NETPortable,Version=v4.0,Profile=Profile344":{
+            "frameworkAssemblies":{
+                "mscorlib":"",
+                "System":"",
+                "System.Core":""
+            }
+        },
+        ".NETPortable,Version=v4.0,Profile=Profile336":{
+            "frameworkAssemblies":{
+                "mscorlib":"",
+                "System":"",
+                "System.Core":""
+            }
+        },
+        ".NETPortable,Version=v4.0,Profile=Profile328":{
             "frameworkAssemblies":{
                 "mscorlib":"",
                 "System":"",
