--- a/libs/lib1/project.json
+++ b/libs/lib1/project.json
@@ -1,10 +1,18 @@
 {
-    "dependencies":{
-        "System.Runtime":"4.0.0-rc1-*"
-    },
     "frameworks":{
-        "dnxcore50":{},
-        "dotnet51":{},
-        "dotnet55":{}
+        "net40":{
+            "frameworkAssemblies": {
+                "System.Net":"",
+                "System.Text.RegularExpressions":""
+            }
+            
+        },
+        "dotnet55":{
+            "dependencies": {
+                "System.Runtime":"4.0.0-rc1-*",
+                "System.Net.Http": "4.0.1-beta-23409",
+                "System.Text.RegularExpressions": "4.0.11-beta-23409"
+            }
+        }
     }
 }
