--- a/libs/lib/src/Lib/project.json
+++ b/libs/lib/src/Lib/project.json
@@ -11,7 +11,8 @@
             "dependencies": {
                 "System.Runtime":"4.0.0-rc1-*",
                 "System.Net.Http": "4.0.1-beta-23409",
-                "System.Text.RegularExpressions": "4.0.11-beta-23409"
+                "System.Text.RegularExpressions": "4.0.11-beta-23409",
+                "System.Threading.Tasks": "4.0.11-beta-23409"
             }
         }
     }
